...
                  const SizedBox(height: 32),

                  // Menu List
                  _buildMenuItem(
                    context,
                    CupertinoIcons.cart,
                    'My Orders',
                    onTap: () {
                      Navigator.push(
                        context,
                        MaterialPageRoute(
                          builder: (_) => const OrderHistoryScreen(),
                        ),
...
                  ),

                  const SizedBox(height: 8),
                  _buildMenuItem(
                    context,
                    CupertinoIcons.heart_fill,
                    'My Wishlist',
                    onTap: () {
                      Navigator.push(
                        context,
                        MaterialPageRoute(
                          builder: (_) => const WishlistScreen(),
                        ),
...
